--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
 			
 		</div>
 
-		<div class="collapse navbar-collapse">
+		<div class="navbar-deafult">
 			<ul class="navbar-nav nav">
 				<li><a href="#">Recipes</a></li>
 				<li><a href="#">Shopping List</a></li>
